ECA-3582: Now testing that the DN in the CSR is unmodified in the resulting certificate when AllowDNOverride is set in CP. Leading and trailing spaces tested in NestedMessageContentTest. Also some cleaing up of the tests.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@19204 37aeb1de-b14b-0410-9a0e-82b28170d228